--- a/style.css
+++ b/style.css
@@ -5,12 +5,20 @@
   font-family: "Poppins", sans-serif;
 }
 
+body{
+  background-color: rgba(0, 0, 0, 0.889);
+  color: var(--font-color);
+  font-size: 1.2rem;
+}
+
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
 :root {
   --button-background-color: antiquewhite;
   --font-color: antiquewhite;
   --brown-color: brown;
+  --light-yollow: rgb(181, 126, 54);
+  --overlay-bg-color : #241d15;
 }
 
 button {
@@ -29,14 +37,13 @@ button:hover {
 }
 .container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   position: relative;
-  color: var(--font-color);
-  background-color: rgba(0, 0, 0, 0.889);
 }
 .form {
   text-align: center;
@@ -57,7 +64,7 @@ button:hover {
   outline: none;
   padding: 0.8rem;
 }
-.todo-input::placeholder {
+input::placeholder {
   color: var(--font-color);
 }
 .toster {
@@ -84,7 +91,7 @@ button:hover {
   padding: 0.4rem;
   font-size: 1.3rem;
   border-radius: 6px;
-  margin: 0 0 0.5rem 0;
+  margin: 0.5rem 0.3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -92,4 +99,152 @@ button:hover {
 }
 .todo-list-value {
     padding-right: 1rem;
+    overflow: hidden;
+}
+.taskCound-section{
+  position: relative;
+  width: 100%;
+  height: 5rem;
+}
+.taskCound{
+  position: absolute;
+  right: 3rem;
+  top: 2rem;
+  padding: 0.6rem;
+  border-radius: 6px;
+  color: var(--light-yollow);
+  border: 1px solid var(--light-yollow);
+  transition: 0.3s ease all;
+  cursor: pointer;
+}
+.taskCound:hover{
+   color: var(--font-color);
+   border: 1px solid var(--light-yollow);
+   background-color: var(--light-yollow);
+}
+.taskDisplay{
+  display: none;
+  font-weight: 700;
+}
+.totalTaskNumber{
+  color: var(--font-color);
+}
+
+/* Edite Overlay*/
+.overlay{
+  display: none;
+}
+.taskEditeOverlay{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: #241d15cc;
+  cursor: pointer;
+  display: flex;
+  z-index: 1;
+  justify-content: center;
+  align-items: center;
+}
+.taskEdite{
+  background-color: var(--light-yollow);
+  padding: 0.6em;
+  border-radius: 6px;
+  position: relative;
+  box-shadow: rgb(0 0 0 / 20%) 0px 8px 24px;
+}
+.overlayClose{
+  color: var(--light-yollow);
+  position: absolute;
+  top: -1em;
+  font-size: 1.2em;
+  right: -1em;
+  transition: 0.3s ease all;
+}
+.overlayClose:hover{
+   color: var(--font-color);
+}
+
+.todo-edite-input{
+  background-color: inherit;
+  font-size: 1.3rem;
+  color: var(--font-color);
+  border: none;
+  outline: none;
+  padding: 0.8rem;
+}
+
+/*Aside Bar*/
+
+.aslide-bar{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+/*  background-color: var(--font-color);*/
+  min-width: 18rem;
+  width: 18%;
+}
+.aside-heading{
+  text-align: center;
+  padding: 1rem 0;
+  color: var(--brown-color);
+  border-bottom: 2px solid var(--brown-color);
+}
+.asideBar-taskMenu{
+  position: relative;
+  height: 100%;
+  background-color: var(--font-color);
+  transition: 1s ease all;
+  transform: translateX(-100%);
+}
+.taskMenuActive{
+   transition: 1s ease all;
+   transform: translateX(0%);
+}
+
+.asideBar-icons{
+  position: absolute;
+  top: 50%;
+  right: -1.6rem;
+  color: var(--light-yollow);
+  font-size: 2.3rem;
+  transition: 0.3s ease all;
+}
+.asideBar-icons:hover{
+  color: var(--font-color);
+}
+
+/* todo notification */
+
+.toaster-notification{
+    position: fixed;
+    top: 2rem;
+    text-transform: capitalize;
+    padding: 0.5rem;
+    border-radius: 6px;
+}
+.notification-delete, .notification-added{
+   display: none;
+   animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+ 100% { opacity: 1; }
+}
+
+.copyright{
+    color: var(--font-color);
+    font-size: 1rem;
+    position: absolute;
+    text-align: center;
+    right: 0;
+    left: 0;
+    bottom: 1rem;
+    font-weight: 600;
+}
+.copyright a{
+     font-size: inherit;
+     color: var(--brown-color);
 }
